--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0-canary.16",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0"
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
+    "netlify-plugin-cache": "^1.0.3"
   },
   "dependencies": {
     "@11ty/eleventy-activity-feed": "^1.0.5",
