--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@11ty/eleventy-activity-feed": "^1.0.5",
-    "@11ty/eleventy-fetch": "^3.0.0"
+    "@11ty/eleventy-fetch": "^3.0.0",
+    "luxon": "^3.1.0",
+    "rss-parser": "^3.12.0"
   }
 }
